# eppin

./: COPYING.txt  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
epepin_api/: daemon.py  server.py  utils.py
epepin_api/codes/: codes.py  messages.py
epepin_api/config/: epepin_server.cfg
epepin_api/database/: database.py
epepin_api/exceptions/: db_exceptions.py  epepin_exceptions.py  request_exceptions.py
epepin_api/reponse/: response.py
epepin_api/templates/: list.html
epepin_api/v1/: routes.py
tests/: response.json  sample.json  sample1.json
tests/functional/: test_functional.py
tests/integration/: test_database.py
tests/unit/: unit.py
tests/unit/exceptions/: test_db_exceptions.py
tests/unit/response/: test_response.py
